# pjecz-tauro-flask

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  appserver.py  changelog.md  pyproject.toml  pyproject.toml.old
cli/commands/: alimentar_autoridades.py  alimentar_distritos.py  alimentar_modulos.py  alimentar_permisos.py  alimentar_roles.py  alimentar_turnos_estados.py  alimentar_turnos_tipos.py  alimentar_unidades.py  alimentar_usuarios.py  alimentar_usuarios_roles.py  alimentar_ventanillas.py  cmd_db.py  cmd_turnos.py  cmd_usuarios.py  respaldar_autoridades.py  respaldar_distritos.py  respaldar_modulos.py  respaldar_roles_permisos.py  respaldar_turnos_estados.py  respaldar_turnos_tipos.py  respaldar_unidades.py  respaldar_usuarios_roles.py  respaldar_ventanillas.py
config/: gunicorn_config.py  settings.py
lib/: pwgen.py  safe_string.py  tasks.py  universal_mixin.py
scripts/: cli-turnos.sh  cli-usuarios.sh
sql/: v1.3.0-01-add-campo-unidades.sql
tauro/: app.py  extensions.py
tauro/blueprints/api_key_v1/: resources.py  schemas.py
tauro/blueprints/api_key_v1/endpoints/: actualizar_turno_estado.py  actualizar_usuario.py  autenticar.py  consultar_configuracion_usuario.py  consultar_turnos_estados.py  consultar_turnos_tipos.py  consultar_ubicaciones.py  consultar_unidades.py  consultar_ventanillas.py  crear_turno.py  test_conexion.py  test_crear_turno.py  tomar_turno.py
tauro/blueprints/api_keys/: forms.py  models.py  views.py
tauro/blueprints/api_oauth2_v1/: resources.py  schemas.py
tauro/blueprints/api_oauth2_v1/endpoints/: actualizar_turno_estado.py  actualizar_usuario.py  autenticar.py  consultar_configuracion_usuario.py  consultar_turnos.py  consultar_turnos_estados.py  consultar_turnos_tipos.py  consultar_turnos_unidad.py  consultar_ubicaciones.py  consultar_unidades.py  consultar_ventanillas.py  consultar_ventanillas_activas.py  crear_turno.py  tomar_turno.py
tauro/blueprints/api_v1/: resources.py  schemas.py
tauro/blueprints/api_v1/endpoints/: actualizar_turno_estado.py  actualizar_usuario.py  autenticar.py  cambiar_turno_estado.py  consultar_configuracion_usuario.py  consultar_turnos.py  consultar_turnos_estados.py  consultar_turnos_tipos.py  consultar_turnos_unidad.py  (+5 more)
tauro/blueprints/autoridades/: forms.py  models.py  views.py
tauro/blueprints/bitacoras/: models.py  views.py
tauro/blueprints/distritos/: models.py  views.py
tauro/blueprints/entradas_salidas/: models.py  views.py
tauro/blueprints/modulos/: models.py  views.py
tauro/blueprints/permisos/: forms.py  models.py  views.py
tauro/blueprints/roles/: models.py  views.py
tauro/blueprints/sistemas/: views.py
tauro/blueprints/turnos/: forms.py  models.py  views.py
tauro/blueprints/turnos_estados/: forms.py  models.py  views.py
tauro/blueprints/turnos_tipos/: forms.py  models.py  views.py
tauro/blueprints/ubicaciones/: forms.py  models.py  views.py
tauro/blueprints/unidades/: forms.py  models.py  views.py
tauro/blueprints/unidades_ubicaciones/: models.py  views.py
tauro/blueprints/unidades_ventanillas/: models.py  views.py
tauro/blueprints/usuarios/: forms.py  models.py  views.py
tauro/blueprints/usuarios_roles/: forms.py  models.py  views.py
tauro/blueprints/usuarios_turnos_tipos/: forms.py  models.py  views.py
tauro/blueprints/ventanillas/: forms.py  models.py  views.py
tauro/services/: voceador.py  vocear_turnos.py
tauro/static/css/: bs5-dashboard.css  bs5-login.css
tauro/templates/: index.html
tauro/templates/layouts/: app.jinja2
tests/: __init__.py  leer_socketio.html  test_actualizar_usuario.py  test_consultar_unidades.py  test_crear_turno.py  test_unidades.py
(+51 files in other folders)
