[project]
name = "pjecz-tauro-flask"
version = "0.1.2"
description = "Sistema de Turnos - Backend"
authors = ["ricval <ricardo.valdes@pjecz.gob.mx>", "Carlos Hdz <carlos.hernandez@pjecz.gob.mx>"]
license = "AGPL3"
readme = "README.md"
requires-python = ">=3.14"
package-mode = false

dependencies = [
    "click>=8.3.1",
    "cryptography>=46.0.5",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-login>=0.6.3",
    "flask-moment>=1.0.6",
    "flask-restful>=0.3.10",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=25.1.0",
    "hashids>=1.3.1",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "pytz>=2026.1.post1",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-utils>=0.42.1",
    "unidecode>=1.4.0",
    "uvicorn>=0.41.0",
    "werkzeug>=3.1.6",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "faker>=40.8.0",
    "isort>=8.0.1",
    "pre-commit>=4.5.1",
    "pylint>=4.0.5",
    "pylint-sqlalchemy>=0.3.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
